Version 20070426
================

Thanks to Matt Hopcroft:

- Layers with height=0 were not being processed (should've been
  thickness=0).


Version 20061130
================

- Fixes to the build process.
- Memory stability fixes.

Version 20061012
================

- Fixed compile errors on msys due to u_int16_t being defined as uint16_t.

These changes thanks to Arun Persaud:

- Added simple support for Boxes (they are treated as Boundaries)
- gdsoglviewer uses the config.txt settings to set the initial position.
- gdsoglviewer displays a camera and lookat position which can be used in gds2pov.
- Zero width paths no longer prevent the rest of the GDS2 file being parsed.
- An error in the type of the STYPTABLE record was fixed.

These changes suggested by Frederic Pecourt:

- Added the option of using a camera include file in gds2pov rather than
  calculating the camera position inside the main pov file.

Version 20060301
================

- Changed libgdsto3d long and short types to int32_t and int16_t as appropriate
  problems when long and short change size.

Version 20060228
================

- Fixed gds2pov -b option which wasn't producing any output.

Version 20060227
================

- Added gds2svg
- Fixed other minor problems

Version 0.7.3 (23rd November 2004)
==================================

- Fixed occasional problem with invalid characters being printed in layer
  names. Thanks to Scott Lin.
- Fixed boundary calculation when an SREF only contained other SREFs.
- SREF boundaries are now output when the -v option is given.

Version 0.7.2 (17th November 2004)
==================================

- Fixed texture definition problem under Windows.
- Fixed texture definition when texture is a metal.

Version 0.7.1 (16th November 2004)
==================================

- Improved the way textures are defined in the .pov file which reduces the
  size of the file substantially for large designs.