@@ -1,7 +1,6 @@
 PROJECT (gdsto3d)
-SET (VERSION "20070601")
 
-ADD_DEFINITIONS (-DVERSION=${VERSION} -DHAVE_CONFIG_H)
+ADD_DEFINITIONS (-DHAVE_CONFIG_H)
 INCLUDE_DIRECTORIES (${gdsto3d_BINARY_DIR})
 
 INCLUDE (CheckIncludeFile)
