@@ -1,3 +1,5 @@
+#define VERSION "20070601"
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #cmakedefine HAVE_DLFCN_H 1
 
