@@ -51,7 +51,7 @@ void printusage()
 	printf(" -q\t\tQuiet output\n");
 	printf(" -t\t\tSpecify top cell name\n");
 	printf(" -v\t\tVerbose output\n\n");
-	printf("See http://www.atchoo.org/gds2pov/ for updates.\n");
+	printf("See http://atchoo.org/gds2pov/ for updates.\n");
 }
 
 int main(int argc, char *argv[])
