@@ -1,3 +1,11 @@
+Version 20070601
+================
+
+- Fixed erroneous URLs in the help for each program.
+- Changed the build chain to use cmake instead of autotools.
+- 
+-
+
 Version 20070426
 ================
 
